# coursera-specialization-data-mining

./: .gitignore  README.md
1_data-visualization/programming-assignment-2/: .gitignore
1_data-visualization/programming-assignment-2/scripts/: assignment.R
2_text-retrieval/Assignment_1/: config.toml  ranking-experiment.cpp
2_text-retrieval/Assignment_1/Assignment1/submissions/: task8.txt
2_text-retrieval/programming-assignment-1/: README.md
2_text-retrieval/programming-assignment-1/task-4/: ranking-experiment.cpp
2_text-retrieval/programming-assignment-1/task-5/: config.toml
2_text-retrieval/programming-assignment-1/task-6/: ranking-experiment.cpp
2_text-retrieval/programming-assignment-1/task-8/: analyze.cpp  config.toml  queries.txt  ranking-experiment.cpp
2_text-retrieval/programming-assignment-2/: README.md
2_text-retrieval/programming-assignment-2/Assignment_2/: CMakeLists.txt  competition.cpp  config.toml  grader.py  new-judgements.cpp  relevantdocs.txt  setup.sh  submit.txt
2_text-retrieval/programming-assignment-2/Assignment_2/Assignment2/: submit.py
2_text-retrieval/programming-assignment-2/Assignment_2/Data/: moocs-judging-queries.txt  moocs-queries.txt
2_text-retrieval/programming-assignment-2/_corrected_files/: competition.cpp  config.toml
data-visualization/programming-assignment-1/scripts/: assignment.R
data-visualization/programming-assignment-2/scripts/: assignment.R
